added new menu and Genre data